2013-03-05  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Bind a local variable correctly.
	(twittering-call-api-with-account-in-api1.1): correctly bind the
	variable `spec-string' used.

2013-03-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use the JSON format for retrieving list
	information if possible.
	(twittering-http-get-list-sentinel-base): support a response in
	the JSON format.
	(twittering-call-api): use the JSON format for the commands
	`get-list-index' and `get-list-subscriptions' if possible.

	* twittering-mode.el: Use the JSON format for posting a status if
	possible.
	(twittering-http-post-destroy-status-sentinel): support a response
	in the JSON format.
	(twittering-call-api): use the JSON format for the command
	`destroy-status' if possible.

	* twittering-mode.el: Use the JSON format for retrieving server
	configuration if possible.
	(twittering-call-api): use the JSON format for the command
	`get-service-configuration' if possible.
	(twittering-update-service-configuration-sentinel): support a
	response in the JSON format.

	* twittering-mode.el: Sort newly retrieved tweets before rendering
	them.
	(twittering-add-statuses-to-timeline-data): sort added tweets
	before rendering them. This is necessary because
	`twittering-render-timeline' assumes that given tweets are
	ordered.

	* twittering-mode.el: Update the server information only when
	receiving a response from a Twitter-like service. Other types of
	responses such as image retrieval and URL shortening do not update
	the info.
	(twittering-send-http-request): do not invoke
	`twittering-update-server-info' directly.
	(twittering-http-get): modify the sentinel so that it also invokes
	`twittering-update-server-info'.
	(twittering-http-post): likewise.
	(twittering-update-server-info): receive an alist HEADER-INFO
	instead of a string HEADER-STR.

	* twittering-mode.el: Add a new function
	`twittering-call-api-with-account'.